fix: aligning mobile view and css class names

--- a/sites/public/src/pages/account/account.module.scss
+++ b/sites/public/src/pages/account/account.module.scss
@@ -13,7 +13,7 @@
   }
 }
 
-.account-card-edit-section {
+.account-card-settings-section {
   --card-content-padding-inline: var(--seeds-s12);
   @media (max-width: theme("screens.sm")) {
     --card-content-padding-inline: var(--seeds-s4);
